fixed spacing on auth pages

--- a/src/views/containers/Login/Login.css
+++ b/src/views/containers/Login/Login.css
@@ -68,7 +68,7 @@ body {
   border-radius: 15px;
   cursor: pointer;
   font-size: 16px;
-  margin-top: 10px;
+  margin-top: 100px;
   box-sizing: border-box;
   display: block;
 }
